--- a/app/lib/l10n/app_es.arb
+++ b/app/lib/l10n/app_es.arb
@@ -36,6 +36,15 @@
   "manualInterpretations": "Interpretaciones Manuales",
   "inputPhysicalDeck": "Ingresa las cartas de tu baraja física para obtener perspectivas mejoradas con IA",
   "selectReadingContext": "Selecciona el contexto de lectura",
+  "searchCardsHint": "Buscar cartas por nombre o palabras clave...",
+  "noCardsFound": "No se encontraron cartas",
+  "tryAdjustingSearch": "Intenta ajustar tu búsqueda o filtro",
+  "selectCard": "Seleccionar una Carta",
+  "selectCardOrientation": "Seleccionar Orientación de la Carta",
+  "chooseCardPosition": "Elige cómo apareció esta carta en tu lectura:",
+  "upright": "Derecha",
+  "reversed": "Invertida",
+  "allCards": "Todas las Cartas",
   "chooseAreaOfLife": "Elige el área de la vida que quieres explorar",
   "addYourCards": "Añade tus cartas",
   "selectCardsFromDeck": "Selecciona las cartas que sacaste de tu baraja física",
@@ -227,5 +236,22 @@
   "saveReadingsToBuildJournal": "Guarda lecturas para comenzar a construir tu diario",
   "cardsCount": "{count} cartas",
   "unableToLoadStats": "No se pudieron cargar las estadísticas",
-  "unableToLoadJournalEntries": "No se pudieron cargar las entradas del diario"
+  "unableToLoadJournalEntries": "No se pudieron cargar las entradas del diario",
+  
+  "chooseYourSpread": "Elige tu Tirada",
+  "selectSpreadType": "Selecciona el tipo de lectura que resuene con tu pregunta",
+  "selectASpread": "Selecciona una Tirada",
+  "startSpreadReading": "Comenzar Lectura de {spreadName}",
+  "shufflingCards": "Barajando las cartas...",
+  "universePreparingReading": "El universo está preparando tu lectura",
+  "somethingWentWrong": "Algo salió mal",
+  "unableToCreateReading": "No se pudo crear tu lectura. Por favor inténtalo de nuevo.",
+  "goBack": "Volver",
+  "cardsBeingDealt": "Las cartas se están repartiendo...",
+  "watchCardsPlaced": "Observa cómo tus cartas se colocan en sus posiciones",
+  "tapToRevealCards": "Toca para revelar tus cartas",
+  "touchCardWhenReady": "Toca cada carta cuando estés listo para ver su mensaje",
+  "yourReading": "Tu Lectura",
+  "saveToJournal": "Guardar en Diario",
+  "newReading": "Nueva Lectura"
 }
